[tool.poetry]
name = "shroudbot"
version = "0.1.0"
description = ""
authors = ["tdc <tdc@tdccc.com.tw>"]

[tool.poetry.dependencies]
python = "^3.8"
dataclasses-json = "^0.5.7"
Pyrogram = "^2.0.102"
TgCrypto = "^1.2.5"
coloredlogs = "^15.0.1"
PyYAML = "^6.0"
aiohttp = "^3.8.4"
pyotp = "^2.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
